--- a/doc/3.event.md
+++ b/doc/3.event.md
@@ -8,3 +8,42 @@
 子节点 冒泡阶段执行
 父节点 冒泡阶段执行
    原生的 根节点 冒泡阶段执行
+
+## stopPropagation
+
+阻止捕获
+parentCapture = (e) => {
+   e.stopPropagation();
+   console.log("父节点 捕获阶段执行");
+};
+
+```console
+父节点 捕获阶段执行（阻止了事件传播，不走子节点的捕获了）
+   原生的 根节点 捕获阶段执行（走了原生的根节点捕获，但是不会继续向下传播了）
+```
+
+为什么没有走 子节点 捕获阶段执行？？
+
+- 因为在父节点 捕获之后，阻止了事件传播
+
+---
+阻止冒泡
+
+childBubble = (e) => {
+   e.stopPropagation();
+   console.log("子节点 冒泡阶段执行");
+};
+
+```console
+父节点 捕获阶段执行
+子节点 捕获阶段执行
+  原生的 根节点 捕获阶段执行
+  原生的 父节点 捕获阶段执行
+  原生的 子节点 捕获阶段执行
+  原生的 子节点 冒泡阶段执行
+  原生的 父节点 冒泡阶段执行
+子节点 冒泡阶段执行
+  原生的 根节点 冒泡阶段执行
+```
+
+没有走 父节点 冒泡阶段执行
